<resources>
    <string name="app_name">OnlineWallet-MobilApp</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="register_here">register here</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="fullname">fullname</string>
    <string name="email">email</string>
    <string name="login_here">login_here</string>
    <string name="data_button">button</string>
    <string name="date">Date</string>
    <string name="holder">Holder</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="credit_card_number">Card number</string>
    <string name="expiration_date">MM/YY</string>
    <string name="cvv">Security code</string>

    <string name="upload">upload</string>

    <string name="successful">Successful</string>
    <string name="ok">OK</string>

    <string name="please_enter_first_name">Please enter your first name</string>
    <string name="please_enter_last_name">Please enter your last name</string>

    <string name="invalid_card_number">Invalid credit card number</string>
    <string name="invalid_expiration_date">Invalid MM/YY exp. date</string>
    <string name="invalid_cvv">Invalid security code</string>


    <string name="personal_card_document_iD">Document ID</string>
    <string name="personal_card_fullname">Fullname</string>
    <string name="personal_card_gender">Gender</string>
    <string name="personal_card_date_year">Year</string>
    <string name="personal_card_date_month">Month</string>
    <string name="personal_card_date_day">Day</string>

    <string name="upload_personal_card">upload</string>
    <string name="add_personal_card">Add personal card</string>
    <string name="add_credit_card">Add credit card</string>

</resources>